--- a/Makefile.am
+++ b/Makefile.am
@@ -39,7 +39,7 @@ src_libbitcoin_la_SOURCES = \
     src/error.cpp \
     src/chain/block.cpp \
     src/chain/chain_state.cpp \
-    src/chain/compact_number.cpp \
+    src/chain/compact.cpp \
     src/chain/header.cpp \
     src/chain/input.cpp \
     src/chain/output.cpp \
@@ -221,7 +221,7 @@ test_libbitcoin_test_LDADD = src/libbitcoin.la ${boost_unit_test_framework_LIBS}
 test_libbitcoin_test_SOURCES = \
     test/main.cpp \
     test/chain/block.cpp \
-    test/chain/compact_number.cpp \
+    test/chain/compact_.cpp \
     test/chain/header.cpp \
     test/chain/input.cpp \
     test/chain/output.cpp \
@@ -339,7 +339,7 @@ include_bitcoin_bitcoin_chaindir = ${includedir}/bitcoin/bitcoin/chain
 include_bitcoin_bitcoin_chain_HEADERS = \
     include/bitcoin/bitcoin/chain/block.hpp \
     include/bitcoin/bitcoin/chain/chain_state.hpp \
-    include/bitcoin/bitcoin/chain/compact_number.hpp \
+    include/bitcoin/bitcoin/chain/compact.hpp \
     include/bitcoin/bitcoin/chain/header.hpp \
     include/bitcoin/bitcoin/chain/history.hpp \
     include/bitcoin/bitcoin/chain/input.hpp \
