--- a/builds/msvc/vs2013/libbitcoin-test/libbitcoin-test.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin-test/libbitcoin-test.vcxproj
@@ -69,9 +69,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\..\test\chain\script\number.hpp" />
-    <ClInclude Include="..\..\..\..\test\chain\script\script.hpp" />
+    <ClInclude Include="..\..\..\..\test\chain\script.hpp" />
     <ClInclude Include="..\..\..\..\test\math\hash.hpp" />
+    <ClInclude Include="..\..\..\..\test\script\number.hpp" />
     <ClInclude Include="..\..\..\..\test\wallet\mnemonic.hpp" />
   </ItemGroup>
   <ItemGroup>
@@ -84,10 +84,7 @@
     <ClCompile Include="..\..\..\..\test\chain\point.cpp" />
     <ClCompile Include="..\..\..\..\test\chain\point_iterator.cpp" />
     <ClCompile Include="..\..\..\..\test\chain\satoshi_words.cpp" />
-    <ClCompile Include="..\..\..\..\test\chain\script\number.cpp" />
-    <ClCompile Include="..\..\..\..\test\chain\script\opcode.cpp" />
-    <ClCompile Include="..\..\..\..\test\chain\script\operation.cpp" />
-    <ClCompile Include="..\..\..\..\test\chain\script\script.cpp" />
+    <ClCompile Include="..\..\..\..\test\chain\script.cpp" />
     <ClCompile Include="..\..\..\..\test\chain\transaction.cpp" />
     <ClCompile Include="..\..\..\..\test\config\authority.cpp" />
     <ClCompile Include="..\..\..\..\test\config\base58.cpp" />
@@ -145,6 +142,9 @@
     <ClCompile Include="..\..\..\..\test\message\ping.cpp" />
     <ClCompile Include="..\..\..\..\test\message\not_found.cpp" />
     <ClCompile Include="..\..\..\..\test\message\verack.cpp" />
+    <ClCompile Include="..\..\..\..\test\script\number.cpp" />
+    <ClCompile Include="..\..\..\..\test\script\opcode.cpp" />
+    <ClCompile Include="..\..\..\..\test\script\operation.cpp" />
     <ClCompile Include="..\..\..\..\test\unicode\unicode.cpp" />
     <ClCompile Include="..\..\..\..\test\unicode\unicode_istream.cpp" />
     <ClCompile Include="..\..\..\..\test\unicode\unicode_ostream.cpp" />
