--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
@@ -106,6 +106,11 @@
     <ClCompile Include="..\..\..\..\src\log\file_collector_repository.cpp" />
     <ClCompile Include="..\..\..\..\src\log\file_counter_formatter.cpp" />
     <ClCompile Include="..\..\..\..\src\log\sinks.cpp" />
+    <ClCompile Include="..\..\..\..\src\machine\interpreter.cpp" />
+    <ClCompile Include="..\..\..\..\src\machine\number.cpp" />
+    <ClCompile Include="..\..\..\..\src\machine\opcode.cpp" />
+    <ClCompile Include="..\..\..\..\src\machine\operation.cpp" />
+    <ClCompile Include="..\..\..\..\src\machine\program.cpp" />
     <ClCompile Include="..\..\..\..\src\math\checksum.cpp" />
     <ClCompile Include="..\..\..\..\src\math\crypto.cpp" />
     <ClCompile Include="..\..\..\..\src\math\elliptic_curve.cpp" />
@@ -162,11 +167,6 @@
     <ClCompile Include="..\..\..\..\src\message\ping.cpp" />
     <ClCompile Include="..\..\..\..\src\message\not_found.cpp" />
     <ClCompile Include="..\..\..\..\src\message\verack.cpp" />
-    <ClCompile Include="..\..\..\..\src\script\interpreter.cpp" />
-    <ClCompile Include="..\..\..\..\src\script\number.cpp" />
-    <ClCompile Include="..\..\..\..\src\script\opcode.cpp" />
-    <ClCompile Include="..\..\..\..\src\script\operation.cpp" />
-    <ClCompile Include="..\..\..\..\src\script\program.cpp" />
     <ClCompile Include="..\..\..\..\src\unicode\console_streambuf.cpp" />
     <ClCompile Include="..\..\..\..\src\unicode\ifstream.cpp" />
     <ClCompile Include="..\..\..\..\src\unicode\ofstream.cpp" />
@@ -264,6 +264,14 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\log\severity.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\log\sinks.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\log\sources.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\machine\interpreter.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\machine\number.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\machine\opcode.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\machine\operation.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\machine\program.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\machine\rule_fork.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\machine\script_pattern.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\machine\sighash_algorithm.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\checksum.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\crypto.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\elliptic_curve.hpp" />
@@ -305,14 +313,6 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\network_address.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\not_found.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\verack.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\script\interpreter.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\script\number.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\script\opcode.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\script\operation.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\script\program.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\script\rule_fork.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\script\script_pattern.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\script\sighash_algorithm.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\unicode\console_streambuf.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\unicode\ifstream.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\unicode\file_lock.hpp" />
